src/test/deca/syntax/invalid/created/class/bad_extends.deca
// Description :
//    decl class extends mal ecrit
//
// Resultats :
//		Syntaxe error

class A extend B {

}